--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="28dp"
         android:linksClickable="true"
-        android:onClick="onClickableTextClick"
+        android:onClick="onClickableTextClick_Goto_sign_in"
         android:text="here"
         android:textColor="#E33A3A"
         android:textColorLink="#703838"
