--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
         android:layout_marginTop="70dp"
         android:layout_marginBottom="0dp">
 
-        <include layout="@layout/layout_tile" />
+        <include layout="@layout/layout_tiles" />
     </ScrollView>
 
 
