--- a/app/src/main/res/layout/layout_a_tile.xml
+++ b/app/src/main/res/layout/layout_a_tile.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center_vertical|center_horizontal"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:onClick="onClickableTextClick_Goto_sign_in"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/imageView"
