--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Username"
         android:inputType="text"
@@ -28,6 +28,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginEnd="155dp"
         android:text="Log In"
+        android:backgroundTint="@color/spetia"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -37,13 +39,12 @@
         android:id="@+id/linkCreateNew"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
         android:linksClickable="true"
         android:onClick="onClickableTextClick_Goto_sign_in"
         android:text="here"
-        android:textColor="#E33A3A"
-        android:textColorLink="#703838"
+        android:textColor="#8F5B00"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword" />
 
@@ -73,15 +74,14 @@
 
     <ImageView
         android:id="@+id/imageView3ActivityMain"
-        android:layout_width="92dp"
-        android:layout_height="78dp"
+        android:layout_width="343dp"
+        android:layout_height="333dp"
         android:layout_marginStart="159dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="160dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_person_24" />
+        app:srcCompat="@drawable/logoicon" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
