--- a/app/src/main/res/layout/layout_a_tile.xml
+++ b/app/src/main/res/layout/layout_a_tile.xml
@@ -6,7 +6,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:linksClickable="true"
-    android:onClick="onClickableLayoutClick_goto_view_tile"
+    android:onClick="onLayoutClick_goto_view_tile"
     android:focusable="true">
 
     <ImageView
@@ -18,13 +18,13 @@
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
-        android:layout_height="52dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:text="Title"
         android:textAlignment="center"
         android:textSize="34sp"
         android:textStyle="bold"
-        android:layout_margin="8dp"/>
+        android:layout_margin="5dp"/>
 
 
     <TextView
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="yyyy-mm-dd"
-        android:layout_margin="8dp"/>
+        android:layout_margin="5dp"/>
 
 <!--    <ImageView-->
 <!--        android:layout_width="wrap_content"-->
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="5.0"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:layout_margin="10dp"/>
 
         <ImageView
@@ -64,6 +64,6 @@
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_star_24"
             android:layout_gravity="center"
-            android:layout_margin="8dp"/>
+            android:layout_margin="5dp"/>
     </LinearLayout>
 </LinearLayout>
