--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="blue">#000000FF</color>
+    <color name="blue">#FF0000FF</color>
+    <color name="spetia">#FFA200</color>
+
 </resources>
