--- a/app/src/main/res/layout/fragment_home_tile_view.xml
+++ b/app/src/main/res/layout/fragment_home_tile_view.xml
@@ -79,7 +79,7 @@
 
     <!-- FloatingActionButton -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/editContent"
+        android:id="@+id/saveContentFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
