some bug fixing and ui design

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -21,7 +21,7 @@
             android:layout_gravity="fill"
             android:layout_margin="20dp"
             app:cardCornerRadius="15dp"
-            app:cardElevation="30dp">
+            app:cardElevation="20dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -60,6 +60,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="2dp"
+                        android:layout_marginStart="15dp"
                         android:hint="Pick a Date"
                         android:id="@+id/dateTextView"/>
 
@@ -74,7 +75,7 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="170dp">
+                        android:layout_marginStart="150dp">
 
                         <TextView
                             android:layout_width="wrap_content"
