--- a/app/src/main/res/layout/fragment_home_tile_view.xml
+++ b/app/src/main/res/layout/fragment_home_tile_view.xml
@@ -34,6 +34,7 @@
                     android:src="@drawable/splash" />
 
                 <TextView
+                    android:id="@+id/viewJournaTitleId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
