--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,10 +10,10 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="20dp"
         app:cardCornerRadius="15dp"
-        app:cardElevation="30dp">
+        app:cardElevation="20dp">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -119,9 +119,6 @@
                     android:textSize="20sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-
-
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
