--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".SignInActivity"
@@ -9,147 +9,150 @@
     tools:layout_editor_absoluteY="0dp"
     tools:ignore="MissingConstraints">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="30dp">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/txtRegUsername"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="94dp"
-            android:ems="10"
-            android:hint="Username"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imgView" />
+                <EditText
+                    android:id="@+id/txtRegUsername"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="48dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="Username"
+                    android:inputType="text"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.575"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imgView" />
 
-        <EditText
-            android:id="@+id/txtRegEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="94dp"
-            android:ems="10"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRegUsername" />
+                <EditText
+                    android:id="@+id/txtRegEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegUsername" />
 
-        <EditText
-            android:id="@+id/txtRegPassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="94dp"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRegEmail" />
+                <EditText
+                    android:id="@+id/txtRegPassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegEmail" />
 
-        <EditText
-            android:id="@+id/txtRegPassword2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="94dp"
-            android:ems="10"
-            android:hint="Confirm Password"
-            android:inputType="textPassword"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRegPassword" />
+                <EditText
+                    android:id="@+id/txtRegPassword2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="Confirm Password"
+                    android:inputType="textPassword"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegPassword" />
 
-        <EditText
-            android:id="@+id/txtRegDOB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="88dp"
-            android:layout_marginTop="36dp"
-            android:layout_marginEnd="94dp"
-            android:ems="10"
-            android:hint="YYYY/MM/DD"
-            android:inputType="date"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRegPassword2" />
+                <EditText
+                    android:id="@+id/txtRegDOB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="88dp"
+                    android:layout_marginTop="36dp"
+                    android:layout_marginEnd="94dp"
+                    android:ems="10"
+                    android:hint="YYYY/MM/DD"
+                    android:inputType="date"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegPassword2" />
 
-        <!--    <ProgressBar-->
-        <!--        android:id="@+id/progressBar"-->
-        <!--        android:layout_width="53dp"-->
-        <!--        android:layout_height="60dp"-->
-        <!--        android:layout_marginStart="100dp"-->
-        <!--        android:layout_marginTop="100dp"-->
-        <!--        android:layout_marginEnd="100dp"-->
-        <!--        android:visibility="gone"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toTopOf="parent" />-->
+                <!--    <ProgressBar-->
+                <!--        android:id="@+id/progressBar"-->
+                <!--        android:layout_width="53dp"-->
+                <!--        android:layout_height="60dp"-->
+                <!--        android:layout_marginStart="100dp"-->
+                <!--        android:layout_marginTop="100dp"-->
+                <!--        android:layout_marginEnd="100dp"-->
+                <!--        android:visibility="gone"-->
+                <!--        app:layout_constraintEnd_toEndOf="parent"-->
+                <!--        app:layout_constraintStart_toStartOf="parent"-->
+                <!--        app:layout_constraintTop_toTopOf="parent" />-->
 
-        <Button
-            android:id="@+id/btnSignUp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="144dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="151dp"
-            android:layout_marginBottom="50dp"
-            android:text="Sign Up"
-            android:backgroundTint="@color/spetia"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtRegDOB" />
+                <Button
+                    android:id="@+id/btnSignUp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="144dp"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginEnd="151dp"
+                    android:layout_marginBottom="50dp"
+                    android:text="Sign Up"
+                    android:backgroundTint="@color/spetia"
+                    android:textColor="@color/black"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/txtRegDOB" />
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/imgView"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="84dp"
-            android:background="#48FFEB3B"
-            android:padding="5dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/circular"
-            app:srcCompat="@drawable/baseline_person_24"
-            app:strokeColor="@color/spetia"
-            app:strokeWidth="2dp" />
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/imgView"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="84dp"
+                    android:background="#48FFEB3B"
+                    android:padding="5dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:shapeAppearanceOverlay="@style/circular"
+                    app:srcCompat="@drawable/baseline_person_24"
+                    app:strokeColor="@color/spetia"
+                    app:strokeWidth="2dp" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnImagePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:backgroundTint="@color/spetia"
-            android:tint="#003AFF"
-            app:srcCompat="@drawable/baseline_add_circle_24"
-            app:layout_constraintBottom_toBottomOf="@+id/imgView"
-            app:layout_constraintEnd_toEndOf="@+id/imgView"
-            app:shapeAppearanceOverlay="@style/circular" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-</ScrollView>
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btnImagePicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:backgroundTint="@color/spetia"
+                    android:tint="#003AFF"
+                    app:srcCompat="@drawable/baseline_add_circle_24"
+                    app:layout_constraintBottom_toBottomOf="@+id/imgView"
+                    app:layout_constraintEnd_toEndOf="@+id/imgView"
+                    app:shapeAppearanceOverlay="@style/circular" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+    </androidx.cardview.widget.CardView>
 
 
-<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="match_parent"-->
-<!--tools:context=".SignInActivity">-->
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+</RelativeLayout>
